--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1385,8 +1385,9 @@ body {
 }
 
 .workflow-preview-container {
-  width: 650px;
-  height: 675.4529113769531px;
+  width: 100%;
+  height: 100%;
+  min-height: 18rem;
   /* height: 265px; */
   border: 0px;
   border-radius: 0px;
@@ -1399,7 +1400,7 @@ body {
 /* Mobile responsive untuk workflow preview */
 @media (max-width: 1024px) {
   .workflow-preview-section {
-    height: 280px;
+    height: auto;
     min-height: 280px;
   }
 
@@ -1478,7 +1479,7 @@ body {
 
 @media (max-width: 768px) {
   .workflow-preview-section {
-    height: 200px;
+    height: auto;
     min-height: 200px;
   }
 
@@ -1499,7 +1500,7 @@ body {
 
 @media (max-width: 640px) {
   .workflow-preview-section {
-    height: 200px;
+    height: auto;
     min-height: 200px;
   }
 
@@ -1520,7 +1521,7 @@ body {
 
 @media (max-width: 480px) {
   .workflow-preview-section {
-    height: 180px;
+    height: auto;
     min-height: 180px;
   }
 
@@ -1541,7 +1542,7 @@ body {
 
 @media (max-width: 375px) {
   .workflow-preview-section {
-    height: 160px;
+    height: auto;
     min-height: 160px;
   }
 
